$Id$
$Name$

Version 0.9.8 (19991102)

New Features:
 - add -newtape option to initialize index, but no backup
 - add -num <n> option for reads that will position the tape at the
      specified file number before reading
 - added config file option for whether "erase" actually calls "mt erase"
     or just rewinds - for some drives, mt erase takes hours...
     (variable is $erase_rewind_only)
 - tried to add intelligence for various mt flavors on different Unix variants
 - made block padding a config file option ($pad_blocks).  conv=sync was
     causing problems for Clemmit on OSF1.

Bug fixes:
 - sort the toc output correctly
 - rewind after printing toc
 - fix bug where tape indexes always started at 10 after awhile
     (similar sorting problem with setting $main::nextfile)

Cleanup:
 - web site moved
 - other minor cleanups to tape key handling
 - "-n" bypasses index operations as well
 - fix some messages/formatting

----------------------------------------------------------------------
Version 0.9.7 (19991019)

New Features:
 - table-of-contents support - tells you which backups are on which tapes.
     uses a simple "key" on the tape plus on-disk database files
 - added "traverse mountpoints" config option for non-dump types
     can skip nfs mounts or really do everything
 - added config option to turn off assumption that level zero "all"
     should erase the tape

Bug fixes:
 - add "conv=sync" to dd flags so it will pad blocks
     some tape drivers complain if writes are not padded
     "buffer" already did this since I used the B flag by default
 - don't use `date ..`, but POSIX::strftime() instead
     incremental backups on FreeBSD were busted (no date -r)
 - using $ in exclude expressions broke remote backups if the user's
     login shell was csh/tcsh due to it's insane syntax quirks.  Worked
     around it putting a trailing $ outside the second level quotes
 - works on OSF/1 boxes

Cleanup: