@@ -37,7 +37,7 @@
 #include	<stdio.h>
 #include	<stdlib.h>
 #include	<string.h>
-#include	<getopt.h>
+#include	"getopt.h"
 
 #include	<sys/types.h>
 #include	<fcntl.h>
