@@ -13,12 +13,12 @@ I also have a <A HREF="TODO">to-do</A> list and a list of
 <A HREF="CHANGES">changes</A>
 <P>
 
-<B>Version 0.9.7</B>
+<B>Version 0.9.8</B>
 <UL>
-<LI><A HREF="tarball/flexbackup-0.9.7.tar.gz">flexbackup-0.9.7.tar.gz</A> (Oct 19 1999)
-<LI><A HREF="RPMS/flexbackup-0.9.7-1.src.rpm">flexbackup-0.9.7-1.src.rpm</A>
-<LI><A HREF="RPMS/flexbackup-0.9.7-1.noarch.rpm">flexbackup-0.9.7-1.noarch.rpm</A>
-<LI>FreeBSD <A HREF="FreeBSD/flexbackup-0.9.7.tgz">package</A> (it's in
+<LI><A HREF="tarball/flexbackup-0.9.8.tar.gz">flexbackup-0.9.8.tar.gz</A>  (Nov 2 1999)
+<LI><A HREF="RPMS/flexbackup-0.9.8-1.src.rpm">flexbackup-0.9.8-1.src.rpm</A>
+<LI><A HREF="RPMS/flexbackup-0.9.8-1.noarch.rpm">flexbackup-0.9.8-1.noarch.rpm</A>
+<LI>FreeBSD <A HREF="FreeBSD/flexbackup-0.9.8.tgz">package</A> (it's in
 the ports collection)
 </UL>
 
@@ -28,7 +28,7 @@ the ports collection)
 Linux "dump/restore" is back under active maintenance, please go
 <A HREF="http://perso.cybercable.fr/pop/dump/">here</A>
 to get the latest version and check out the change info.  The latest
-version is 0.4b7 as of this writing.
+version is 0.4b9 as of this writing.
 </BLOCKQUOTE>
 
 <BLOCKQUOTE>
@@ -54,25 +54,15 @@ for providing <A HREF="http://www.bluecherry.net/~edwinh/flexbackup/">mirror spa
 
 <B>Old versions:</B>
 <BLOCKQUOTE>
-<A HREF="tarball/flexbackup-0.9.6.tar.gz">flexbackup-0.9.6.tar.gz</A> (Oct 03 1999)<BR>
-<A HREF="RPMS/flexbackup-0.9.6-1.src.rpm">flexbackup-0.9.6-1.src.rpm</A><BR>
-<A HREF="RPMS/flexbackup-0.9.6-1.noarch.rpm">flexbackup-0.9.6-1.noarch.rpm</A><BR>
-0.9.6 FreeBSD <A HREF="FreeBSD/flexbackup-0.9.6.tgz">package</A><BR>
-<A HREF="tarball/flexbackup-0.9.5.tar.gz">flexbackup-0.9.5.tar.gz</A> (Sep 27 1999)<BR>
-<A HREF="RPMS/flexbackup-0.9.5-1.src.rpm">flexbackup-0.9.5-1.src.rpm</A><BR>
-<A HREF="RPMS/flexbackup-0.9.5-1.noarch.rpm">flexbackup-0.9.5-1.noarch.rpm</A><BR>
-<A HREF="tarball/flexbackup-0.9.4.tar.gz">flexbackup-0.9.4.tar.gz</A> (Sep 24 1999)<BR>
-<A HREF="RPMS/flexbackup-0.9.4-1.src.rpm">flexbackup-0.9.4-1.src.rpm</A><BR>
-<A HREF="RPMS/flexbackup-0.9.4-1.noarch.rpm">flexbackup-0.9.4-1.noarch.rpm</A><BR>
-<A HREF="tarball/flexbackup-0.9.2.tar.gz">flexbackup-0.9.2.tar.gz</A> (Sep 20 1999)<BR>
-<A HREF="RPMS/flexbackup-0.9.2-1.src.rpm">flexbackup-0.9.2-1.src.rpm</A><BR>
-<A HREF="RPMS/flexbackup-0.9.2-1.noarch.rpm">flexbackup-0.9.2-1.noarch.rpm</A><BR>
+<A HREF="tarball/">source package</A><BR>
+<A HREF="RPMS/">RPM format</A><BR>
+<A HREF="FreeBSD/">FreeBSD packages</A><BR>
 </BLOCKQUOTE>
 
 <HR>
 [ <A HREF="http://members.home.com/edwinh/">home</A> ]
 <ADDRESS><A HREF="mailto:flexbackup@home.com">Edwin Huffstutler &lt;edwinh@computer.org&gt;</A></ADDRESS>
 <!-- hhmts start -->
-Last modified: Wed Oct 27 20:37:11 MST 1999
+Last modified: Fri Nov  5 06:22:32 MST 1999
 <!-- hhmts end -->
 </BODY> </HTML>
